...
        tagsViewModel = tagsViewModel,
        navigationActions = navigationActions,
        profilesViewModel = profilesViewModel)
  }

  Scaffold(
      topBar = {
        TopAppBar(
            title = {
              Text(
                  stringResource(R.string.filter),
                  color = MaterialTheme.colorScheme.onPrimary,
                  modifier = Modifier.testTag("FilterTopBarTitle"))
            },
            modifier = Modifier.testTag("FilterTopBar"),
            navigationIcon = {
              IconButton(
                  onClick = {
                    handleSafeBackNavigation(
                        isModified = isModified,
                        setShowDialog = { showDialog = it },
                        tagsViewModel = tagsViewModel,
                        navigationActions = navigationActions,
                        profilesViewModel = profilesViewModel)
                  },
                  modifier = Modifier.testTag("Back Button")) {
                    Icon(
                        Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "Back",
                        tint = MaterialTheme.colorScheme.onPrimary)
                  }
            },
...
                KeyboardOptions(
                    autoCorrectEnabled = false, keyboardType = KeyboardType.NumberPassword),
            maxLines = 1,
            modifier =
                Modifier.height(IntrinsicSize.Min)
                    .width(textFieldWidth)
                    .testTag("AgeFromTextField")
                    .onFocusChanged {
                      if (!it.isFocused) validateAgeRange()
                      onFromFocusChanged(it.isFocused)
                    },
            label = { Text("From") },
            singleLine = true,
...
                KeyboardOptions(
                    autoCorrectEnabled = false, keyboardType = KeyboardType.NumberPassword),
            maxLines = 1,
            modifier =
                Modifier.height(IntrinsicSize.Min)
                    .width(textFieldWidth)
                    .testTag("AgeToTextField")
                    .onFocusChanged {
                      if (!it.isFocused) validateAgeRange()
                      onToFocusChanged(it.isFocused)
                    },
            label = { Text("To") },
            singleLine = true,
...
    Row(
        modifier = Modifier.align(Alignment.Center),
        horizontalArrangement = Arrangement.spacedBy(SMALL_PADDING.dp)) {
          // Reset Button
          Button(
              onClick = onReset,
              modifier = Modifier.width(buttonWidth).height(buttonHeight).testTag("ResetButton"),
              colors =
                  ButtonDefaults.buttonColors(
                      containerColor = MaterialTheme.colorScheme.surfaceVariant,
                      contentColor = MaterialTheme.colorScheme.onSurfaceVariant)) {
                Text(
                    "Reset",
...
              }

          // Filter Button
          Button(
              onClick = onClick,
              enabled = enabled,
              modifier = Modifier.width(buttonWidth).height(buttonHeight).testTag("FilterButton"),
              colors =
                  ButtonDefaults.buttonColors(
                      containerColor = MaterialTheme.colorScheme.primary,
                      contentColor = MaterialTheme.colorScheme.onPrimary,
                      disabledContainerColor =
                          MaterialTheme.colorScheme.primary.copy(
...
